--- a/src/ParentComponent/ParentComponent.css
+++ b/src/ParentComponent/ParentComponent.css
@@ -1,3 +1,12 @@
+/* ___Colors___
+Dark Green: #164A41
+Medium Green: #4D774E
+Light Green: #9DC88D
+Natural Yellow: #F1B24A
+White: #fff
+Dark Mode Font: #121212
+Dark Mode Field BG: #3b3b3b */
+
 /* App container */
 .main-container {
   display: flex;
@@ -13,6 +22,10 @@
   color: #fff;
 }
 
+.form-control {
+  border: var(--bs-border-width) solid #9DC88D !important;
+}
+
 /* UI screen */
 .ui-screen {
   font-size: 16px;
@@ -22,6 +35,13 @@
   overflow: hidden;
   color: #fff;
   background-image: linear-gradient(to right, #164a41, #4d774e);
+}
+
+.desc-headers{
+  font-size: 20px;
+  font-weight: 400;
+  color: #F1B24A;
+  margin: 0 0 25px 0;
 }
 
 .next-btn {
@@ -46,13 +66,13 @@
 
 .next-btn:hover {
   color: white;
-  background: #f1b24a;
+  background: #f1b24a; 
   transition: 0.3s background;
 }
 
 /* Resize handle */
 .resize-handle {
-  width: 10px;
+  width: 9px;
   cursor: col-resize;
   background-color: #ccc;
   display: flex;
@@ -74,7 +94,10 @@
   border: 1px solid #ccc;
   padding: 10px;
 }
-
+.preview-desc{
+  color: #164A41;
+  margin: 24px 0 28px 0;
+}
 .preview-screen::-webkit-scrollbar {
   width: 9px;
 }
@@ -95,15 +118,7 @@
   background-color: #f1b24a;
 }
 
-/* ___Colors___
-Dark Green: #164A41
-Medium Green: #4D774E
-Light Green: #9DC88D
-Natural Yellow: #F1B24A
-White: #fff */
-
 /* *************  Multi select Styling  *************** */
-
 .vitals-multi-select-div {
   color: #000;
 }
@@ -118,9 +133,28 @@ White: #fff */
 .multi-select .dropdown-container {
   border-radius: 6px !important;
   border: 1px solid #ccc;
-  box-shadow: inset 0 1px 1px #cccccc80;
+  /* box-shadow: inset 0 1px 1px #cccccc80; */
   cursor: pointer;
 }
+
+.multi-select .options::-webkit-scrollbar {
+  width: 9px;
+}
+
+.multi-select .options::-webkit-scrollbar-thumb {
+  background-color: #f1b24a;
+  border-radius: 10px !important;
+  box-shadow: inset 0 0 7px rgba(0, 0, 0 / 30%);
+}
+
+.multi-select .options::-webkit-scrollbar-track {
+  background-color: #ced9f3;
+  border-radius: 20px !important;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0 / 30%);
+}
+/* .multi-select .gray {
+  color: #000;
+} */
 
 /* .multi-select .dropdown-heading {
   height: 26px;
@@ -129,9 +163,6 @@ White: #fff */
   cursor: inherit;
 }
 
-.multi-select .gray {
-  color: #333;
-}
 
 .multi-select .search input {
   background: #fff;
@@ -153,23 +184,6 @@ White: #fff */
   font-size: 12px !important;
 }
 
-.multi-select .options::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-  background-color: #f5f5f5;
-}
-
-.multi-select .options::-webkit-scrollbar-thumb {
-  border-radius: 6px;
-  -webkit-box-shadow: inset 0 0 7px #00000030;
-  background-color: #7d7d7d;
-}
-
-.multi-select .options::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px #00000030;
-  border-radius: 10px;
-  background-color: #f5f5f5;
-}
 
 .multi-select .options li {
   color: #363843;
@@ -194,6 +208,16 @@ White: #fff */
   background-color: #3f5183;
   border-color: #3f5183;
 } */
+
+
+/****** Dark Mode ******/
+.labels-dark-mode .fields-dark-mode{
+  color: #fff !important;
+}
+.fields-dark-mode{
+  background-color: #3b3b3b !important;
+  border: 1px solid #fff !important;
+}
 
 /******   Media queries for Parent Component   ******/
 @media only screen and (max-width: 767px) {
